# Grasping-of-Unknown-Objects-using-Top-Surfaces

./: CMakeLists.txt  README.md
Algorithms/Cavity_Detection/: main.cpp
Media/: Scene_with_boundary_grasp_points.pcd  heuristic_grasp_point_5.pcd  heuristic_grasp_point_6.pcd
install/: local_setup.sh  setup.sh
install/Grasping-of-Unknown-Objects-using-Top-Surfaces/share/Grasping-of-Unknown-Objects-using-Top-Surfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/Grasping-of-Unknown-Objects-using-Top-Surfaces/share/ament_index/resource_index/package_run_dependencies/: Grasping-of-Unknown-Objects-using-Top-Surfaces
install/vbrm-dr/lib/vbrm-dr/: PointCloudProcessor
install/vbrm-dr/share/vbrm-dr/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: simulation.launch.py
log/: latest_build
rviz2/: rviz2_visualization.rviz
src/: main.cpp
