<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Grasping-of-Unknown-Objects-using-Top-Surfaces</name>
  <version>0.0.0</version>
  <description>Grasping of Unknown Objects using Top Surfaces from a Table Top - Directed Research</description>
  <maintainer email="ktrivedi@wpi.edu">kt</maintainer>
  <maintainer email="akumbla@wpi.edu">ak</maintainer>
  <maintainer email="abaidya@wpi.edu">ab</maintainer>
  <maintainer email="pppatel@wpi.edu">pp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_1.10</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
